--- a/app/src/main/res/layout/fragment_points.xml
+++ b/app/src/main/res/layout/fragment_points.xml
@@ -3,14 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Points Fragment"
-        android:textStyle="normal"
-        android:fontFamily="sans-serif"
-        android:textSize="32sp"
-        android:textColor="@android:color/black"
-        android:gravity="center"/>
-
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp" />
 </RelativeLayout>
