--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,14 @@
 
     <EditText
         android:id="@+id/searchText"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="29dp"
-        android:ems="10"
+        android:layout_marginTop="30dp"
         android:hint="Введите номер договора"
         android:inputType="number"
-        android:digits="0,1,2,3,4,5,6,7,8,9"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="41dp" />
+        android:digits="0,1,2,3,4,5,6,7,8,9"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
