--- a/app/src/main/res/layout/list_content.xml
+++ b/app/src/main/res/layout/list_content.xml
@@ -5,23 +5,25 @@
     android:id="@+id/parent_layout">
 
     <TextView
-        android:id="@+id/dealNum"
+        android:id="@+id/Period_Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="15dp"
         android:layout_marginTop="12dp"
+        android:paddingRight="5dp"
         android:text="dealNum"
         android:textAlignment="viewStart"
         android:textSize="12sp" />
 
     <TextView
-        android:id="@+id/subjectName"
+        android:id="@+id/pointName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/dealNum"
-        android:layout_below="@+id/dealNum"
+        android:layout_alignStart="@+id/Period_Name"
+        android:layout_below="@+id/Period_Name"
+        android:paddingRight="5dp"
         android:text="Subject"
         android:textAlignment="viewStart"
         android:textSize="18sp"
@@ -31,9 +33,10 @@
         android:id="@+id/addressName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/dealNum"
-        android:layout_below="@+id/subjectName"
+        android:layout_alignStart="@+id/Period_Name"
+        android:layout_below="@+id/pointName"
         android:layout_marginBottom="12dp"
+        android:paddingRight="5dp"
         android:text="Address"
         android:textAlignment="viewStart"
         android:textSize="12sp" />
